--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.try_catch_em_all">
+     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="try_catch_em_all"
         android:name="${applicationName}"
